--- a/public/style.css
+++ b/public/style.css
@@ -12,9 +12,41 @@ body {
   background-attachment: fixed;
   align-content: center;
 }
+.bodyframe {
+  background-color: #ffffff00;
+  margin-top: 8vh;
+}
 
 #main {
+  font-size: 15vw;
   text-align: center;
   line-height: 0.8;
   color: rgb(52, 83, 117);
+}
+
+nav {
+  background-color: rgb(52, 83, 117);
+  margin-top: 8vh;
+  height: 10vh;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+a {
+  font-size: 2.5vw;
+  margin: 0 3vw;
+  text-decoration: none;
+  color: #fff;
+}
+.frame {
+  display: flex;
+  justify-content: center;
+  width: 90vw;
+  height: 100vh;
+  margin: auto;
+}
+.frame iframe {
+  width: 100%;
 }
