--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 body {
   background-color: rgb(233, 233, 233);
   background-image: url(./fondo.jpg);
-  height: 100vh;
+  height: 150vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,6 +16,7 @@ body {
   background-color: #ffffff00;
   background-image: none;
   margin-top: 8vh;
+  max-height: 700px;
 }
 
 #main {
@@ -51,11 +52,12 @@ nav a:hover {
   display: flex;
   justify-content: center;
   width: 95vw;
-  height: 100vh;
+  height: 800px;
   margin: auto;
 }
 .frame iframe {
   width: 100%;
+  height: 1430px;
 }
 
 .card {
